--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.3",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
     "bulma": "^1.0.3",
     "react": "^18.3.1",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.1.3",
     "sweetalert2": "^11.15.10"
   },
